# LockstepSaturation

./: .gitignore  .gitmodules  main.cpp  read.cpp  yoloswaggus
PNMLFiles/: xb_slow.pnml  xb_slow100.pnml  (+6 more)
lockstep_algorithm/: CMakeLists.txt  Lockstep saturation_test.csv  Xie-Beerel saturation BDD size_bdd_count_backwardSet_new.csv  makefile  runthrough1.csv  runthrough2.csv  test.csv  test1.csv  test2.csv  test3.csv  todo.txt  xb_slow_test.csv
lockstep_algorithm/data/: Full data.xlsx  Lockstep relation union_1.csv  Lockstep relation union_2.csv  Lockstep relation union_3.csv  Lockstep relation union_no_pruning_1.csv  Lockstep relation unionno_pruning_2.csv  Lockstep relation unionno_pruning_3.csv  Lockstep saturation_1.csv  Lockstep saturation_2.csv  Lockstep saturation_3.csv  Lockstep saturation_no_pruning_1.csv  Lockstep saturation_no_pruning_2.csv  Lockstep saturationno_pruning_2.csv  Lockstep saturationno_pruning_3.csv  Xie-Beerel backward relation union_1.csv  Xie-Beerel backward relation union_2.csv  Xie-Beerel backward relation union_3.csv  Xie-Beerel backward relation union_no_pruning_1.csv  Xie-Beerel backward relation union_no_pruning_3.csv  Xie-Beerel backward relation unionno_pruning_2.csv  Xie-Beerel backward relation unionno_pruning_3.csv  Xie-Beerel backward saturation_1.csv  Xie-Beerel backward saturation_2.csv  Xie-Beerel backward saturation_3.csv  Xie-Beerel backward saturation_no_pruning_1.csv  Xie-Beerel backward saturation_no_pruning_3.csv  Xie-Beerel backward saturationno_pruning_2.csv  Xie-Beerel backward saturationno_pruning_3.csv  Xie-Beerel relation union_1.csv  Xie-Beerel relation union_2.csv  Xie-Beerel relation union_3.csv  Xie-Beerel relation union_no_pruning_1.csv  Xie-Beerel relation union_no_pruning_3.csv  Xie-Beerel relation unionno_pruning_2.csv  Xie-Beerel relation unionno_pruning_3.csv  Xie-Beerel saturation_1.csv  Xie-Beerel saturation_2.csv  Xie-Beerel saturation_3.csv  Xie-Beerel saturation_no_pruning_1.csv  Xie-Beerel saturation_no_pruning_2.csv  (+5 more)
lockstep_algorithm/data/No pruning/: Lockstep relation union no pruning more PNs best.xlsx  Lockstep saturation large no pruning best.xlsx  Lockstep saturation no pruning best times.xlsx  Lockstep saturation no pruning more PNs best.xlsx  Lockstep-relation-union-no-pruning-best-times.xlsx  No-pruning-best-times-1.xlsx  No-pruning-best-times.xlsx  XB backward rel union no pruning best times.xlsx  XB backward sat no pruning best times.xlsx  XB rel union no pruning best times.xlsx  XB sat no pruning best times.xlsx  Xie-Beerel relation union no pruning more PNs best.xlsx  Xie-Beerel saturation large no pruning best.xlsx  Xie-Beerel saturation no pruning more PNs best.xlsx
lockstep_algorithm/src/: CMakeLists.txt  bdd_utilities.cpp  bdd_utilities.h  benchmark.cpp  benchmark.h  graph_creation.cpp  graph_creation.h  graph_examples.cpp  graph_examples.h  interface.cpp  interface.h  lockstep.cpp  lockstep.h  lockstep_test.cpp  lockstep_test.h  main.cpp  petriTranslation.cpp  petriTranslation.h  print.cpp  print.h  read.cpp  set_test.cpp  set_test.h  utilities.h
lockstep_algorithm/test/: CMakeLists.txt  graph_examples.cpp  graph_examples.h  test_lockstep.cpp  test_runlockstep.cpp  test_runlockstep.h  test_sccListCorrectness.cpp  test_sccListCorrectness.h  test_shift.cpp  test_shift.h
(+282 files in other folders)
